--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -39,9 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HistoryEntry.cs" />
+    <Compile Include="HistoryEntryFactory.cs" />
     <Compile Include="LanguageFactory.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Localization.cs" />
+    <Compile Include="JsonPersister.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
