--- a/CoreTests/CoreTests.csproj
+++ b/CoreTests/CoreTests.csproj
@@ -45,8 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DifferenceFinderTests.cs" />
     <Compile Include="LanguageFactoryTests.cs" />
+    <Compile Include="LocalizationBuilderTests.cs" />
     <Compile Include="LocalizationTests.cs" />
+    <Compile Include="ModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
