--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AreaFactory.cs" />
+    <Compile Include="CommandInvoker.cs" />
     <Compile Include="DifferenceFinder.cs" />
     <Compile Include="GuidGenerator.cs" />
     <Compile Include="HistoryEntry.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="Localization.cs" />
     <Compile Include="JsonPersister.cs" />
     <Compile Include="LocalizationBuilder.cs" />
+    <Compile Include="LocalizationHandler.cs" />
     <Compile Include="LocalizationKeyFactory.cs" />
     <Compile Include="LocalizationPersistance.cs" />
     <Compile Include="LocalizedTextFactory.cs" />
