finished command pattern and implemented the common cases

--- a/CoreTests/CoreTests.csproj
+++ b/CoreTests/CoreTests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandInvokerTests.cs" />
     <Compile Include="DifferenceFinderTests.cs" />
     <Compile Include="AreaFactoryTests.cs" />
     <Compile Include="LanguageFactoryTests.cs" />
