added (shit) ui for language. Undo/redo i implemented

--- a/L10Nify/L10Nify.csproj
+++ b/L10Nify/L10Nify.csproj
@@ -67,20 +67,20 @@
     </ApplicationDefinition>
     <Compile Include="AppBootstrapper.cs" />
     <Compile Include="IShell.cs" />
-    <Compile Include="ShellViewModel.cs" />
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Compile Include="ViewModel\AddLanguageViewModel.cs" />
+    <Compile Include="ViewModel\ShellViewModel.cs" />
+    <Page Include="View\AddLanguageView.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
+    <Compile Include="View\AddLanguageView.xaml.cs">
+      <DependentUpon>AddLanguageView.xaml</DependentUpon>
     </Compile>
-    <Page Include="ShellView.xaml">
+    <Page Include="View\ShellView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
