--- a/L10Nify/L10Nify.csproj
+++ b/L10Nify/L10Nify.csproj
@@ -70,8 +70,12 @@
     <Compile Include="IShell.cs" />
     <Compile Include="ViewModel\AddAreaViewModel.cs" />
     <Compile Include="ViewModel\AddLanguageViewModel.cs" />
+    <Compile Include="ViewModel\AddLocalizationKeyViewModel.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="ViewModel\ShellViewModel.cs" />
+    <Compile Include="View\AddLocalizationKeyView.xaml.cs">
+      <DependentUpon>AddLocalizationKeyView.xaml</DependentUpon>
+    </Compile>
     <Page Include="View\AddAreaView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -90,6 +94,10 @@
     <Compile Include="View\AddLanguageView.xaml.cs">
       <DependentUpon>AddLanguageView.xaml</DependentUpon>
     </Compile>
+    <Page Include="View\AddLocalizationKeyView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\ShellView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
