--- a/L10Nify/L10Nify.csproj
+++ b/L10Nify/L10Nify.csproj
@@ -78,16 +78,21 @@
     <Compile Include="ViewModel\Factory\AreaViewModelFactory.cs" />
     <Compile Include="ViewModel\ITreeNodeViewModel.cs" />
     <Compile Include="ViewModel\LanguageTreeNodeViewModel.cs" />
+    <Compile Include="ViewModel\ListOrientedWorkbenchViewModel.cs" />
     <Compile Include="ViewModel\LocalizationKeyTreeNodeViewModel.cs" />
     <Compile Include="ViewModel\LocalizedTextTreeNodeViewModel.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="ViewModel\ShellViewModel.cs" />
     <Compile Include="ViewModel\TreeViewModelBuilder.cs" />
+    <Compile Include="ViewModel\Factory\WorkbenchFactory.cs" />
     <Compile Include="View\AddLocalizationKeyView.xaml.cs">
       <DependentUpon>AddLocalizationKeyView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\AddLocalizedTextView.xaml.cs">
       <DependentUpon>AddLocalizedTextView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ListOrientedWorkbenchView.xaml.cs">
+      <DependentUpon>ListOrientedWorkbenchView.xaml</DependentUpon>
     </Compile>
     <Page Include="View\AddAreaView.xaml">
       <SubType>Designer</SubType>
@@ -112,6 +117,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\AddLocalizedTextView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ListOrientedWorkbenchView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
