--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AreaFactory.cs" />
+    <Compile Include="BuildJsonResourceFileVisitor.cs" />
     <Compile Include="CommandInvoker.cs" />
     <Compile Include="DifferenceFinder.cs" />
     <Compile Include="GuidGenerator.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="LocalizationHandler.cs" />
     <Compile Include="LocalizationKeyFactory.cs" />
     <Compile Include="LocalizationPersistance.cs" />
+    <Compile Include="LocalizationVisitorFactory.cs" />
     <Compile Include="LocalizedTextFactory.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
