added isdefault value to language

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AreaFactory.cs" />
+    <Compile Include="BuildDotNetResourceFiles.cs" />
     <Compile Include="BuildJsonResourceFileVisitor.cs" />
     <Compile Include="CommandInvoker.cs" />
     <Compile Include="DifferenceFinder.cs" />
